src/objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Adjustments__c</fullName>
        <inlineHelpText>in thousands</inlineHelpText>
        <label>Adjustments</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defe__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Forecast__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Executive Forecast</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTD_Actuals__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>QTD Actuals</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_p_quota_plan__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Quota Plan</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Adjustments__c</columns>
        <columns>Defe__c</columns>
        <columns>f_p_quota_plan__c</columns>
        <columns>Executive_Forecast__c</columns>
        <columns>Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Forecast</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>